<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.truongbx.emotionalmessage.model.User" />

        <variable
            name="version"
            type="String" />

        <variable
            name="settingFragment"
            type="com.truongbx.emotionalmessage.ui.setting.SettingFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.setting.SettingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_gradient_toolbar"
                android:orientation="vertical">

                <com.truongbx.emotionalmessage.helper.BaseStatusBar
                    android:id="@+id/base_status_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    app:layout_constraintBottom_toTopOf="@+id/toolbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_56sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/toolbar_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="start"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:fontFamily="@font/nunito_extrabold"
                            android:gravity="center"
                            android:text="@string/title_toolbar_setting"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_24sdp"
                            tools:ignore="RelativeOverlap" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:layout_width="@dimen/_32sdp"
                            android:layout_height="@dimen/_32sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@drawable/state_pressed_ripple"
                            android:backgroundTint="@color/white"
                            android:onClick="@{()-> settingFragment.onBackPress()}"
                            android:src="@drawable/message"
                            app:borderWidth="0dp"
                            app:elevation="0dp"
                            app:fabCustomSize="@dimen/_32sdp"
                            app:maxImageSize="@dimen/_18sdp"
                            app:tint="@null"
                            tools:ignore="ContentDescription" />

                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:src_glide="@{user.avatar}"
                        android:id="@+id/imgAvatarItemChat"
                        android:layout_width="@dimen/_56sdp"
                        android:layout_height="@dimen/_56sdp"
                        android:scaleType="centerCrop"
                        android:src="@{user.avatar}"
                        app:riv_corner_radius="@dimen/_48sdp"
                        app:riv_oval="true"
                        tools:src="@drawable/ic_launcher_background" />

                    <TextView
                        android:id="@+id/tvNameSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_toEndOf="@+id/imgAvatarItemChat"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@{user.full_name}"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/name_setting"
                        tools:text="Bùi Xuân Trường" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvNameSetting"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_toEndOf="@+id/imgAvatarItemChat"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/see_more"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/see_more_setting" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/theme"
                    android:textColor="@color/gray_text_light"
                    android:textSize="@dimen/title_setting" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_theme"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/dark_mode"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_16sdp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/btnSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:onClick="@{()-> settingFragment.selectionDarkMode()}"
                        android:theme="@style/Switch" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/account"
                    android:textColor="@color/gray_text_light"
                    android:textSize="@dimen/title_setting" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_edit_account"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/edit_account"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_change_password"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/change_password"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/other"
                    android:textColor="@color/gray_text_light"
                    android:textSize="@dimen/title_setting" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_help"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/help"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_law"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/law"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_version"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@{@string/version(version)}"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_16sdp"
                        tools:text="Phiên bản 1.0.0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{()-> settingFragment.logOut()}"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_logout"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/logout"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>