<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialogLogOut"
            type="com.truongbx.emotionalmessage.ui.setting.DialogLogOut" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_all">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white50"
                android:orientation="vertical">

                <LinearLayout
                    android:padding="@dimen/_24sdp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/logout_cap"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/question_log_out"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_14sdp" />


                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_line_dialog" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="center"
                        android:onClick="@{()-> dialogLogOut.cancel()}"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/cancel"
                        android:textColor="@color/gray_text_light"
                        android:textSize="@dimen/_16sdp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray_line_dialog"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="134dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="center"
                        android:onClick="@{()-> dialogLogOut.logOut()}"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/logout_cap"
                        android:textColor="@color/main_color"
                        android:textSize="@dimen/_16sdp" />


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>