<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="check"
            type="Boolean" />

        <variable
            name="checkImage"
            type="Boolean" />

        <variable
            name="dialogMessage"
            type="com.truongbx.emotionalmessage.ui.message.DialogMessage" />

        <variable
            name="message"
            type="com.truongbx.emotionalmessage.model.Message" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_12sdp">

        <include
            android:id="@+id/btsMessageRight"
            layout="@layout/item_message_right"
            android:visibility="@{check ? View.VISIBLE : View.GONE, default=visible}" />

        <include
            android:id="@+id/btsMessageLeft"
            layout="@layout/item_message_left"
            android:visibility="@{check ? View.GONE : View.VISIBLE, default=visible}" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{()->dialogMessage.copyMessage(message)}"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:visibility="@{checkImage ? View.VISIBLE : View.GONE, default=visible}"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_copy"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/copy"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{()->dialogMessage.undeveloped()}"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_forward"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/forward"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{()->dialogMessage.deleteMessage(message)}"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_trash"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/delete"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>